--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.11.3"
   }
