--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.12.0",
+    "sequelize": "^6.37.5"
   }
 }
