--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5"
   },
   "dependencies": {
+    "@serialport/parser-readline": "^13.0.0",
     "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -23,8 +24,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
+    "node-hid": "^3.1.2",
     "pdfkit": "^0.16.0",
     "sequelize": "^6.37.5",
+    "serialport": "^13.0.0",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.5"
   }
 }
